--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.jackson.deserialization.fail_on_unknown_properties=true
+spring.jackson.deserialization.fail_on_ignored_properties=true
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
