--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jackson.deserialization.fail_on_ignored_properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+
