--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/service-control?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/service_control?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 
@@ -15,3 +15,5 @@ spring.web.resources.add-mappings=false
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 
+client.auth.jwtSecret=r4u7x!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeThWmYq3t6w9z$C&F)J@NcRfUj
+client.auth.jwtExpirationMs=144000000
