--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.web.resources.add-mappings=false
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
 
-client.auth.jwtSecret=r4u7x!A%D*G-KaPdSgUkXp2s5v8y/B?E(H+MbQeThWmYq3t6w9z$C&F)J@NcRfUj
+client.auth.jwtSecret=${SECRETY}
 client.auth.jwtExpirationMs=14400000
