--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost/service_control_test?createDatabase
 spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 
-spring.flyway.locations=classpath:db/migration
+spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
 spring.datasource.hikari.maximum-pool-size=10
 
